<resources>
    <string name="app_name">Traductor</string>
    <string name="title_home">Inicio</string>
    <string name="title_history">Historial</string>
    <string name="title_text">Texto</string>
    <string name="title_camera">Camara</string>
    <string name="title_voice">Voz</string>

    <string name="from">De</string>
    <string name="to">A</string>
    <string name="translate">Traducir</string>
    <string name="entry">Entrada</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_delete">Borrar</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="confirmation">Seguro desea eliminar?</string>
    <string name="confirmation_session">Seguro desea cerrar sesion?</string>

    <string name="user">Usuario</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="email">Correo Electronico</string>
    <string name="password">Contraseña</string>
    <string name="login_button">Iniciar Sesion</string>
    <string name="registration_button">Crear Cuenta</string>
    <string name="to_login">Ya tiene cuenta? Inicie sesion</string>
    <string name="to_registration">Aun no tiene cuenta? Cree una</string>
    <string name="email_error">Ingrese un correo electronico valido</string>
    <string name="password_error">El campo contraseña no puede estar vacio</string>
    <string name="name_error">El campo nombre no puede estar vacio</string>
    <string name="lastname_error">El campo apellido no puede estar vacio</string>
    <string name="login_error">Error en inicio de sesion</string>
    <string name="signup_error">Error en creacion de cuenta</string>
    <string name="signup">Cuenta creada correctamente!</string>
    <string name="profile">Perfil</string>
    <string name="logout">Cerrar sesion</string>
    <string name="session">Sesion</string>
    <string name="edit">Editar</string>
    <string name="delete">Borrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>
